# doublespace

./: README.md  doublespace.c  meson.build  pyproject.toml
.github/workflows/: test.yml  wheels.yml
subprojects/: libdeds.wrap
